--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "gulp-sass": "4.0.x",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
+    "htmlmin": "0.0.7",
     "node-normalize-scss": "^8.0.0",
+    "postcss-normalize": "^7.0.1",
     "posthtml-include": "^1.2.0",
     "stylelint": "9.10.x",
-    "stylelint-config-htmlacademy": "0.1.x"
+    "stylelint-config-htmlacademy": "0.1.x",
+    "uglify": "^0.1.5"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -48,10 +52,8 @@
   "dependencies": {
     "del": "^4.1.1",
     "gulp-rename": "^1.4.0",
-    "htmlmin": "0.0.7",
     "imagemin-mozjpeg": "^8.0.0",
     "mozjpeg": "^6.0.1",
-    "normalize.css": "^8.0.1",
-    "postcss-normalize": "^7.0.1"
+    "normalize.css": "^8.0.1"
   }
 }
