--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
+    "csscomb": "^4.3.0",
     "gulp": "4.0.x",
+    "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "1.2.x",
-    "gulp-postcss": "8.0.x",
+    "gulp-postcss": "^8.0.0",
     "gulp-posthtml": "^3.0.4",
     "gulp-sass": "4.0.x",
     "gulp-sourcemaps": "2.6.x",
@@ -20,7 +23,9 @@
     "gulp-webp": "^4.0.1",
     "htmlmin": "0.0.7",
     "node-normalize-scss": "^8.0.0",
+    "postcss-cli": "^6.1.2",
     "postcss-normalize": "^7.0.1",
+    "postcss-sorting": "^5.0.0",
     "posthtml-include": "^1.2.0",
     "stylelint": "9.10.x",
     "stylelint-config-htmlacademy": "0.1.x",
